Update Post Category “наука”

--- a/content/postCategories/наука.md
+++ b/content/postCategories/наука.md
@@ -2,5 +2,7 @@
 template: BlogIndex
 title: Наука
 featuredImage: 'https://ucarecdn.com/be7289d9-f802-497b-8a23-0be6a29a363c/'
+meta:
+  canonicalLink: scines
 ---
 
