--- a/content/posts/2019-08-27-веорувяоевеоерокерпварва.md
+++ b/content/posts/2019-08-27-веорувяоевеоерокерпварва.md
@@ -1,7 +1,7 @@
 ---
 template: SinglePost
 title: веорувяоевеоерокерпварва
-status: Draft
+status: Published
 date: 2019-08-27T16:07:40.329Z
 featuredImage: 'https://ucarecdn.com/2def7fa6-aa84-4c31-977f-022548d749be/'
 excerpt: аповповпово
